<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_today"
        android:textColor="@color/general_text"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="@+id/txt_today_temp"
        app:layout_constraintStart_toStartOf="@+id/txt_today_temp" />

    <TextView
        android:id="@+id/txt_today_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:text="@string/_30" />

    <TextView
        android:id="@+id/txt_today_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text"
        app:layout_constraintEnd_toEndOf="@+id/txt_today_temp"
        app:layout_constraintStart_toStartOf="@+id/txt_today_temp"
        app:layout_constraintTop_toBottomOf="@+id/txt_today_temp"
        tools:text="@string/cloudy" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.24" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.76" />

    <TextView
        android:id="@+id/txt_tomorow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomorow"
        android:textColor="@color/general_text"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/txt_oneDayAfterTomorow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:text="@string/july_14" />

    <TextView
        android:id="@+id/txt_twoDaysAfterTomorow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:text="@string/july_15" />

    <TextView
        android:id="@+id/txt_tomorow_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/txt_tomorow"
        tools:text="@string/_30" />

    <TextView
        android:id="@+id/txt_oneDayAfterTomorow_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txt_oneDayAfterTomorow"
        tools:text="@string/_27" />

    <TextView
        android:id="@+id/txt_twoDaysAfterTomorow_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/txt_twoDaysAfterTomorow"
        tools:text="@string/_28" />

    <TextView
        android:id="@+id/txt_tomorow_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/txt_tomorow_temp"
        tools:text="@string/mostly_sunny" />

    <TextView
        android:id="@+id/txt_oneDayAfterTomorow_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txt_oneDayAfterTomorow_temp"
        tools:text="@string/rainy" />

    <TextView
        android:id="@+id/txt_twoDaysAfterTomorow_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/txt_twoDaysAfterTomorow_temp"
        tools:text="@string/rainy" />

    <ToggleButton
        android:id="@+id/btn_toggle_forecastActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/togglebutton"
        android:textColor="@color/general_text"
        android:textOff="@string/f"
        android:textOn="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/switch_to"
        android:textColor="@color/general_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_toggle_forecastActivity"
        app:layout_constraintEnd_toEndOf="@+id/btn_toggle_forecastActivity"
        app:layout_constraintStart_toStartOf="@+id/btn_toggle_forecastActivity" />

    <TextView
        android:id="@+id/txt_city_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/general_text"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        tools:text="Today" />

    <Button
        android:id="@+id/btn_favorites"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle_button"
        android:text="@string/add_to_favorites"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>