<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LayoutStyle">

    <Button
        android:id="@+id/btn_maps"
        style="@style/HomeScreenButtonStyle"
        android:gravity=""
        android:text="@string/maps"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btn_myPlaces"
        style="@style/HomeScreenButtonStyle"
        android:layout_marginBottom="@dimen/btnMarginHomeScreen"
        android:gravity=""
        android:text="@string/my_places"
        app:layout_constraintBottom_toTopOf="@+id/btn_maps"
        app:layout_constraintEnd_toEndOf="@+id/btn_maps"
        app:layout_constraintStart_toStartOf="@+id/btn_maps" />

    <Button
        android:id="@+id/btn_weather"
        style="@style/HomeScreenButtonStyle"
        android:layout_marginBottom="@dimen/btnMarginHomeScreen"
        android:gravity=""
        android:onClick="displayToastMessage"
        android:text="@string/weather"
        app:layout_constraintBottom_toTopOf="@+id/btn_myPlaces"
        app:layout_constraintEnd_toEndOf="@+id/btn_myPlaces"
        app:layout_constraintStart_toStartOf="@+id/btn_myPlaces" />

    <Button
        android:id="@+id/btn_myProfile"
        style="@style/HomeScreenButtonStyle"
        android:layout_marginTop="@dimen/btnMarginHomeScreen"
        android:gravity=""
        android:text="@string/my_profile"
        app:layout_constraintEnd_toEndOf="@+id/btn_maps"
        app:layout_constraintStart_toStartOf="@+id/btn_maps"
        app:layout_constraintTop_toBottomOf="@+id/btn_maps" />

    <Button
        android:id="@+id/btn_logout"
        style="@style/HomeScreenButtonStyle"
        android:layout_marginTop="@dimen/btnMarginHomeScreen"
        android:gravity=""
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/btn_myProfile"
        app:layout_constraintStart_toStartOf="@+id/btn_myProfile"
        app:layout_constraintTop_toBottomOf="@+id/btn_myProfile" />

</android.support.constraint.ConstraintLayout>