<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LayoutStyle">

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText

        android:id="@+id/edt_username_registerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edtTextHeight"
        android:layout_marginStart="@dimen/edtRegisterSideMargin"
        android:layout_marginEnd="@dimen/edtRegisterSideMargin"
        android:background="@drawable/round_edittext"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/input_text_padding"
        android:paddingRight="@dimen/input_text_padding"
        android:textSize="@dimen/generalTextSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <EditText

        android:id="@+id/edt_email_registerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edtTextHeight"
        android:layout_marginStart="@dimen/edtRegisterSideMargin"
        android:layout_marginTop="@dimen/edtMarginTop"
        android:layout_marginEnd="@dimen/edtRegisterSideMargin"
        android:background="@drawable/round_edittext"
        android:hint="@string/hint_register_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/input_text_padding"
        android:paddingRight="@dimen/input_text_padding"
        android:textSize="@dimen/generalTextSize"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/edt_username_registerLayout" />

    <EditText

        android:id="@+id/edt_password_registerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edtTextHeight"
        android:layout_marginStart="@dimen/edtRegisterSideMargin"
        android:layout_marginTop="@dimen/edtMarginTop"
        android:layout_marginEnd="@dimen/edtRegisterSideMargin"
        android:background="@drawable/round_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/input_text_padding"
        android:paddingRight="@dimen/input_text_padding"
        android:textSize="@dimen/generalTextSize"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_registerLayout" />

    <EditText

        android:id="@+id/edt_confirmPassword_registerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edtTextHeight"
        android:layout_marginStart="@dimen/edtRegisterSideMargin"
        android:layout_marginTop="@dimen/edtMarginTop"
        android:layout_marginEnd="@dimen/edtRegisterSideMargin"
        android:background="@drawable/round_edittext"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/input_text_padding"
        android:paddingRight="@dimen/input_text_padding"
        android:textSize="@dimen/generalTextSize"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_registerLayout" />

    <EditText

        android:id="@+id/edt_birthday_registerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edtTextHeight"
        android:layout_marginStart="@dimen/edtRegisterSideMargin"
        android:layout_marginTop="@dimen/edtMarginTop"
        android:layout_marginEnd="@dimen/edtRegisterSideMargin"
        android:layout_marginRight="@dimen/input_text_padding"
        android:background="@drawable/round_edittext"
        android:clickable="true"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/birthday"
        android:inputType="date"
        android:paddingLeft="@dimen/input_text_padding"
        android:paddingRight="@dimen/input_text_padding"
        android:textSize="@dimen/generalTextSize"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirmPassword_registerLayout" />

    <Button
        android:id="@+id/btn_register_registerLayout"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:layout_marginTop="@dimen/btnRegisterMarginTop"
        android:background="@drawable/round_corner_button"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="@dimen/btnTextSize"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/edt_birthday_registerLayout" />

</android.support.constraint.ConstraintLayout>